# WEB_DEV

./: Dockerfile  new_book.csv  notes_save.csv  pyproject.toml  requirements.txt  setup.py
src/: classes.py  main.py  new_book.csv  notes.py  sorter.py  user_interface.py
